--- a/node-express/package.json
+++ b/node-express/package.json
@@ -7,5 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cookie-parser": "^1.4.5",
+    "dotenv": "^10.0.0",
+    "express-session": "^1.17.2",
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.12",
+    "nunjucks": "^3.2.3"
+  }
 }
